# lan-dual-control

./: .gitignore  Build-Windows-Desktop-Control-Mac.cmd  README.md  Run-WinClientRetest-And-Post.cmd  Run-WinClientRetest.cmd  Start-Mac-Control-Windows.command  Start-Windows-Control-Mac.cmd  Start-Windows-Desktop-Control-Mac.cmd  Start-Windows-Host.cmd
apps/mac-client/: README.md  app.js  index.html  server.mjs  styles.css
apps/mac-host/: Package.swift  README.md
apps/mock-mac-host/: server.mjs
apps/windows-client/: README.md  app.js  index.html  launch-params.js  mapping-utils.js  protocol-client.js  server.mjs  styles.css
apps/windows-desktop/: README.md  package-lock.json  package.json
apps/windows-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-desktop/src-tauri/src/: lib.rs  main.rs  native_audio_player.rs  native_audio_queue.rs  w14_native_receiver.rs  w8_native_video.rs  w9_native_audio.rs
apps/windows-host/: README.md  package.json  server.mjs
apps/windows-wgc-helper/: Cargo.toml  README.md
apps/windows-wgc-helper/src/: main.rs
docs/: 01-product-plan.md  02-dual-end-development-plan.md  03-architecture-and-protocol.md  04-task-board.md  05-codex-handoff.md  06-github-workflow.md  07-windows-dev-environment.md  08-next-work-plan.md  09-streaming-video-plan.md  ACTIVE_LOCKS.md  CURRENT_STATUS.md  HANDOFF_LOG.md  LAN_CODEX_LINK.md  NEXT_ACTIONS.md  TEST_COORDINATION.md  w8-rustdesk-audit.md  w8-windows-desktop-video-plan.md  w9-rustdesk-audio-audit.md
scripts/: codex-link-client.mjs  codex-link-daily-items.mjs  codex-link-server.mjs  test-codex-link-client.mjs  test-codex-link-daily-items.mjs  test-codex-link-server.mjs
scripts/mac/: apply-mac-power-settings.mjs  board-windows-lan-risk.mjs  check-input-keymap.mjs  check-mac-client-formal-status.mjs  check-mac-client-readiness.mjs  check-mac-displays.mjs  check-mac-formal-e2e-status.mjs  check-mac-formal-local-smoke.mjs  check-mac-heartbeat.mjs  check-mac-host-readiness.mjs  check-mac-input-safety-status.mjs  check-mac-manual-ux-status.mjs  check-mac-remote-audio-status.mjs  check-mac-resume-status.mjs  check-mac-unattended-status.mjs  discover-windows-hosts.mjs  install-mac-host-launch-agent.mjs  observe-mac-audio.mjs  observe-mac-media.mjs  observe-mac-video.mjs  password-prompt.mjs  plan-mac-input-safety.mjs  plan-mac-power-settings.mjs  plan-mac-remote-audio.mjs  plan-mac-safe-inject-rehearsal.mjs  run-mac-client-formal-smoke.mjs  smoke-mac-input-log.mjs  start-mac-client.mjs  start-mac-heartbeat-watcher.mjs  start-mac-host.mjs  stress-mac-host.mjs  test-discover-windows-hosts.mjs  test-mac-audio-json-output.mjs  (+41 more)
(+115 files in other folders)
