[package]
name = "lan-dual-wgc-helper"
version = "0.1.0"
description = "Windows Graphics Capture helper for LAN dual control"
authors = ["skymoonzyj"]
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
windows = { version = "0.61.3", features = [
  "Foundation",
  "Graphics",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Gdi",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
] }
