[package]
name = "lan-dual-control-windows"
version = "0.1.0"
description = "LAN dual control Windows desktop shell"
authors = ["skymoonzyj"]
edition = "2021"

[lib]
name = "lan_dual_control_windows_audio"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
cpal = "0.15"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
