[package]
name = "lan-dual-control-windows"
version = "0.1.0"
description = "LAN dual control Windows desktop shell"
authors = ["skymoonzyj"]
edition = "2021"

[lib]
name = "lan_dual_control_windows_audio"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
cpal = "0.15"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
] }
